[package]
#Forked from bluecatengineering/dhcproto
name = "usg-dhcproto"
version = "0.19.0"
authors = [
	"Evan Cameron <cameron.evan@gmail.com>",
	"Ian Laidlaw <ilaidlaw@bluecatnetworks.com>",
]
edition = "2024"
rust-version = "1.95"
description = """
A DHCP parser and encoder for DHCPv4/DHCPv6. `dhcproto` aims to be a functionally complete DHCP implementation.
"""
categories = ["network-programming", "encoding", "parser-implementations"]
repository = "https://github.com/192d-Wing/usg-dhcproto"
keywords = ["dhcp", "dhcpv4", "dhcpv6"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.18"
rand = "0.10.1"
serde = { version = "1.0", features = ["derive"], optional = true }
hickory-proto = { version = "0.26.1", default-features = false }
usg-dhcproto-macros = { path = "./dhcproto-macros", version = "0.2.0" }
ipnet = "2.12.0"

[features]
default = []
serde = ["dep:serde", "ipnet/serde", "hickory-proto/serde"]

[dev-dependencies]
criterion = "0.4.0"
serde_json = "1.0.149"

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false
